FIX: missing min in gap wrapper

--- a/_helper.scss
+++ b/_helper.scss
@@ -21,9 +21,9 @@
 @mixin flex-grid-gap($size) {
     $x: if(length($size) == 2, nth($size, 2), nth($size, 1));
     $y: nth($size, 1);
-    margin: if($x == $y, $y, ($y / -2) ($x / -2));
+    margin: if($x == $y, ($y / -2), ($y / -2) ($x / -2));
     > .cell {
-        padding: if($x == $y, $y, ($y / -2) ($x / -2));
+        padding: if($x == $y, ($y / 2), ($y / 2) ($x / 2));
     }
 }
 
